--- a/TournamentsSynthesis/TournamentsWebApp/Pages/Shared/_Layout1.cshtml
+++ b/TournamentsSynthesis/TournamentsWebApp/Pages/Shared/_Layout1.cshtml
@@ -5,34 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TournamentsWebApp</title>
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
-    <link rel="stylesheet" href="~/css/hel.css"/>
+    <link rel="stylesheet" href="~/css/fuck.css">
 </head>
 <body>
     <header class="header">
         <nav class="navbar">
 
             <a class="navbar-brand desktop" asp-page="/LandingPage">
-                <img src="" alt="logo">
+                <img src="~/pic/kisspng-sport-logo-football-clip-art-sports-logos-5b51ce96b2d505.1023534515320879587325.png" alt="logo">
             </a>
 
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
 
+                    <a class="nav-link dropdown-toggle" asp-page="/Home">
                     <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" asp-page="/Home">
-                            Home
-                        </a>
+                        Home
                     </li>
+                    </a>
+
+                    <a class="nav-link dropdown-toggle" asp-page="/AvailableTournaments">
                     <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" asp-page="/AvailableTournaments">
-                            Available Tournaments
-                        </a>
+
+                        Available Tournaments
                     </li>
+                    </a>
+
+                    <a class="nav-link" asp-page="/MyProfile">
                     <li class="nav-item">
-                        <a class="nav-link" asp-page="/MyProfile">
-                            My profile
-                        </a>
+
+                        My profile
                     </li>
+                    </a>
 
                     <li class="nav-item">|</li>
 
