--- a/TournamentsSynthesis/TournamentsWebApp/Pages/Home.cshtml
+++ b/TournamentsSynthesis/TournamentsWebApp/Pages/Home.cshtml
@@ -11,7 +11,6 @@
     }
 
     ViewData["Title"] = "Home";
-
 }
 
 
@@ -41,7 +40,11 @@
                                     @*setting the div class to the status of the tournament because it will change the color for the different statuses*@
 
                                     <div class="@tournament.Status.ToString()">
-                                        <p>Status: @tournament.Status</p>
+                                        <p>Status: 
+                                           
+                                                @tournament.Status
+                                           
+                                        </p>
                                     </div>
 
                                 </div>
