--- a/TournamentsSynthesis/TournamentsWebApp/wwwroot/css/fuck.css
+++ b/TournamentsSynthesis/TournamentsWebApp/wwwroot/css/fuck.css
@@ -126,6 +126,7 @@ input[type=text], input[type=password] {
         cursor: pointer;
         width: 20%;
         font-size: 1vw;
+        border-radius: 10px;
     }
 
     .login_buttons button {
@@ -137,6 +138,7 @@ input[type=text], input[type=password] {
         cursor: pointer;
         width: 20%;
         font-size: 1vw;
+        border-radius: 10px;
     }
 
     .login_buttons input:hover {
@@ -182,8 +184,9 @@ a {
 }
 
     .navbar img {
-        height: 100px;
-        width: 100px;
+        height: 80px;
+        width: 80px;
+        margin: 1em;
     }
 
 .navbar-nav {
@@ -195,22 +198,32 @@ a {
 
 .nav-item {
     padding: 0.8em;
+    font-size: 1em;
 }
 
-    .nav-item a {
-        color: white
+    a .nav-item {
+        color: white;
     }
 
     .nav-item:hover {
         background-color: white;
     }
 
-        .nav-item:hover a {
+       a .nav-item:hover{
             color: black;
         }
 
+.nav-item button {
+    color: white;
+    border: none;
+    background-color: transparent;
+    font-size: 1em;
+}
 
-
+.nav-item:hover button{
+    color: black;
+    cursor: pointer;
+}
 
 
 /*Landing page*/
@@ -254,7 +267,6 @@ a {
 
 .item-container {
     display: flex;
-    background-color: aqua;
     padding-left: 30px;
     padding-right: 30px;
     margin-bottom: 30px;
@@ -262,8 +274,10 @@ a {
     padding-top: 30px;
     transition-duration: 0.4s;
     opacity: 1;
-    transition: 0,3;
-    color: black;
+    transition: 0.3;
+    color: white;
+    border: 1px solid white;
+    border-radius: 15px;
 }
 
     .item-container img {
@@ -278,13 +292,12 @@ a {
 }
 
 .item-container:hover {
-    opacity: 0.5;
+    opacity: 0.8;
 }
 
 /*Tournament Page*/
 
 .container-content {
-    background-color: aquamarine;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -294,44 +307,52 @@ a {
         margin: 20px;
         min-width: 50%;
         text-align: center;
+        border-radius: 15px;
     }
 
 .container-info {
-    background-color: bisque;
+    border: 1px solid skyblue;
+    opacity: 0.9;
 }
 
 .container-ranks {
-    background-color: pink;
+    border: 1px solid skyblue;
+    opacity: 0.9;
 }
 
 .container-participants {
-    background-color: green;
+    background-color: skyblue;
+    color: black;
 }
 
 .container-games {
-    background-color: blue;
+    background-color: skyblue;
     display: flex;
     justify-content: center;
     font-size: 1.1em;
 }
 
     .container-games table {
-        width: 60%;
+        width: 100%;
+        margin: 4%;
+        padding: 1%;
+        border-radius: 15px;
     }
 
     .container-games table, th, td {
-        border: 1px solid blue;
+        border: 1px solid black;
         border-collapse: collaplse;
     }
 
 
     .container-games th {
-        background-color: beige;
+        background-color: black;
         width: 60%;
     }
 
     .container-games td {
-        background-color: aqua;
+        background-color: white;
+        color: black;
     }
 
     .container-games tr {
@@ -343,7 +364,6 @@ a {
 /*Players Profile*/
 
 .container-content-info {
-    background-color: aqua;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -355,8 +375,10 @@ a {
     }
 
 .container-personal-info {
-    background-color: antiquewhite;
+    background-color: white;
+    color: #03045E;
     min-width: 30%;
+    border-radius: 15px;
 }
 
     .container-personal-info h2 {
@@ -365,15 +387,21 @@ a {
     }
 
     .container-personal-info p {
-        margin-left: 2em;
+        margin-left: 38%;
     }
 
 .container-participations {
-    background-color: pink;
+    background-color: white;
+    color: #03045E;
+    border: 1px outset lightskyblue;
+    border-radius: 15px;
 }
 
 .container-tourn-info {
-    background-color: violet;
+    background-color: #CAF0F8;
+    padding: 2%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
     .container-tourn-info p {
@@ -381,18 +409,21 @@ a {
     }
 
 .container-player-tournament {
-    background-color: aliceblue;
-    border: solid 2px black;
     margin: 2em;
     width: 70%;
+    border-radius: 15px;
 }
 
 .container-player-games {
-    background-color: skyblue;
+    background-color: #90E0EF;
+    padding: 2%;
 }
 
 .container-player-rank {
-    background-color: aquamarine;
+    background-color: #00B4D8;
+    padding: 2%;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .container-participations h2, h3 {
@@ -400,21 +431,22 @@ a {
 }
 
 .container-player-games table {
-    width: 60%;
+    width: 90%;
+    margin-bottom: 5%;
 }
 
 .container-player-games th, td {
-    border: 1px solid blue;
+    border: 1px solid white;
     border-collapse: collaplse;
 }
 
 .container-player-games th {
-    background-color: beige;
+    background-color: white;
     width: 60%;
 }
 
 .container-player-games td {
-    background-color: aqua;
+    background-color: white;
 }
 
 .container-player-games tr {
@@ -431,6 +463,7 @@ a {
     display: flex;
     align-items: center;
     flex-direction: column;
+    border-bottom: solid 1px black;
 }
 
 
@@ -440,7 +473,7 @@ a {
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     width: 80%;
 }
 
@@ -448,6 +481,8 @@ a {
     background-color: black;
     color: white;
     border: solid 2px white;
+    border-radius: 15px;
+    margin: 0.5em;
 }
 
     .grid-item:hover {
@@ -494,6 +529,7 @@ a {
 .register-container {
     text-align: center;
     margin-bottom: 1em;
+    margin-top: 1em;
 }
 
     .register-container a {
@@ -506,6 +542,7 @@ a {
         width: 20%;
         font-size: 1vw;
         border: solid 1px black;
+        border-radius: 10px;
     }
 
         .register-container a:hover {
@@ -519,21 +556,64 @@ a {
 
 
 .pending {
-    background-color: coral
+    background-color: coral;
+    text-align: center;
+    border-radius: 15px;
+    max-width: 15em;
 }
 
 .cancelled {
     background-color: red;
+    text-align: center;
+    border-radius: 15px;
+    max-width: 15em;
 }
 
 .ongoing {
-    background-color: blue;
+    background-color: deepskyblue;
+    text-align: center;
+    border-radius: 15px;
+    max-width: 15em;
 }
 
 .open {
     background-color: darkseagreen;
+    text-align: center;
+    border-radius: 15px;
+    max-width: 15em;
+}
+.finished {
+    background-color: plum;
+    text-align: center;
+    border-radius: 15px;
+    max-width: 15em;
 }
 
+
+.pending p{
+   margin: 0;
+   padding: 3%;
+}
+
+.cancelled p{
+    margin: 0;
+    padding: 3%;
+}
+
+.ongoing p{
+    margin: 0;
+    padding: 3%;
+}
+
+.open p{
+    margin: 0;
+    padding: 3%;
+}
+
+.finished p{
+    margin: 0;
+    padding: 3%;
+}
 
 
 /*Sign up form*/
@@ -550,7 +630,7 @@ a {
 .signup-info-container h3 {
     text-align: center;
     margin-bottom: 10%;
-    font-size: 1.7em;
+    font-size: 1.9em;
 }
 
 .signup-info-container h4 {
@@ -565,13 +645,19 @@ a {
     .btn-signup-container input {
         padding: 3%;
         font-size: 1em;
+        border-radius: 10px;
     }
 
 .border-container {
     border: 1px solid white;
     padding: 9%;
+    border-radius: 15px;
+    font-size: 1em;
 }
 
+.border-container h4{
+    font-size: 1.2em;
+}
 .message{
     color: lightgreen;
 }
@@ -594,6 +680,10 @@ a {
 
 .container span {
     color: lightcoral;
+}
+
+.container input{
+    border-radius: 15px;
 }
 
 .error_message {
