edit players profile implemented

--- a/TournamentsSynthesis/TournamentsWebApp/Pages/Shared/_Layout1.cshtml
+++ b/TournamentsSynthesis/TournamentsWebApp/Pages/Shared/_Layout1.cshtml
@@ -40,6 +40,12 @@
 
                     <li class="nav-item">|</li>
 
+                    <a class="nav-link" asp-page="/EditProfile">
+                    <li class="nav-item">
+                        Edit profile
+                    </li>
+                    </a>
+
 
                     <li class="nav-item">
                         <form method="post" asp-page="/Login" asp-page-handler="Logout">
@@ -47,8 +53,8 @@
                                 Logout
                             </button>
                             @*<a class="nav-link">
-                                    Logout
-                                </a>*@
+                    Logout
+                </a>*@
                         </form>
                     </li>
 
