changed color of games on the website

--- a/TournamentsSynthesis/TournamentsWebApp/wwwroot/css/design.css
+++ b/TournamentsSynthesis/TournamentsWebApp/wwwroot/css/design.css
@@ -272,6 +272,7 @@ a .nav-item:hover {
     display: flex;
     justify-content: center;
     font-size: 1.1em;
+    color: black;
 }
 
     .container-games table {
